# Yolk

./: .gitignore  CMakeLists.txt  README.md  main.cpp  todo.txt
.github/workflows/: ubuntu.yml
Original/: main.cpp
Original/src/: ideas.cpp
Original/src/Yolk/: Yolk.h
Original/src/Yolk/Environment/: Environment.h
Original/src/Yolk/Object/: Network.h
Original/src/Yolk/Serializable/: Serializable.h
Original/src/Yolk/Wrapper/: ArgumentUnwrapper.h  TypedField.h  WrapperRequired.h
Original/src/Yolk/YolkVM/: OVO.h  Operators.h  YVM.cpp
Original/tests/Yolk/Wrapper/: test_wrapper.cpp
Original/tests/Yolk/YolkVM/: test_vm.cpp
Rewrite/: CMakeLists.txt  a.out  main.cpp  run.sh
Rewrite/.cache/clangd/index/: Assembler.cpp.41BBB823AD909CB4.idx  Assembler.h.3FFB249F95DA47D0.idx  Assembler.h.4237C23997101A0C.idx  Common.h.027E24784AAB3C4E.idx  Common.h.5C521E63F06BCA51.idx  Core.h.9274A8F30747B4B4.idx  Core.h.BA24866ABF9983F5.idx  DynamicData.h.17DD9F3501F93599.idx  DynamicData.h.972A185226064598.idx  Exceptions.h.2509E99214AECDD6.idx  Exceptions.h.3CAD8199B7C93D87.idx  Exceptions.h.D69CCFCE60EA001D.idx  Exceptions.h.D964830078B0C68E.idx  Instruction.cpp.5F41DC90A09581A8.idx  Instruction.cpp.60D5F32D83501B85.idx  Instruction.h.7239A0F8C8D874BE.idx  OVO.h.3D59A8F3745005DF.idx  (+59 more)
Rewrite/src/: CMakeLists.txt
Rewrite/src/Yolk/: Common.h  Exceptions.h  Generic.h  Yolk.h
Rewrite/tests/: CMakeLists.txt
Rewrite/tests/Serializer/: test_serializablefield.cpp
Rewrite/tests/Yolk/Memory/: test_dynamicmemory.cpp  test_memoryblock.cpp  test_memorymanager.cpp  test_symboltable.cpp  test_wrappertable.cpp
Rewrite/tests/Yolk/Object/: test_object.cpp
Rewrite/tests/Yolk/Wrapper/: test_methodwrapper.cpp  test_tunwrapper.cpp  test_tvariable.cpp  test_wrapper.cpp  test_wrappergenerator.cpp
Rewrite/tests/Yolk/YolkVM/: test_instructions.cpp  test_ovo.cpp
src/: CMakeLists.txt  ideas.cpp  main.cpp
src/Tools/CodeGenerator/: Elementary.h_render  Elementary.py  Operators.h_render  Operators.py  TypedField.h.render  TypedField.py
src/Tools/OPGenerator/: Elementary.h_render  Elementary.py  Generate.py  Operators.h  Operators.h_render
src/Tools/yolkc/: Cargo.toml  Specification.txt
src/Tools/yolkc/src/: lexer.rs  main.rs
src/Yolk/: CMakeLists.txt  Yolk.h
src/Yolk/Assembler/: Assembler.cpp  Assembler.h
src/Yolk/Core/: Core.h  MethodWrapper.h  TypedField.h  WrapperArgument.h  WrapperGenerator.h
src/Yolk/Environment/: Environment.h
src/Yolk/Memory/: Exceptions.h  Memory.h  MemoryInterface.h  MemoryTable.h
src/Yolk/Memory/Memory/: MemoryBlock.h  NewMemoryBlock.h
src/Yolk/Memory/Memory/Tables/: NewSymbolTable.h  SymbolTable.h  WrapperTable.h
src/Yolk/Memory/MemoryManager/: MemoryManager.h
src/Yolk/Object/: Network.h  NewObject.h  Object.h
src/Yolk/Tools/yolkc/src/: lib.rs
src/Yolk/Wrapper/: ArgumentWrapper.h  MethodWrapper.h  TypedField.h  Wrapper.h  WrapperRequired.h
src/Yolk/Yolk/: CMakeLists.txt  Yolk.h
src/Yolk/Yolk/Memory/Memory/: MemoryBlock.h
src/Yolk/Yolk/Memory/Memory/Tables/: SymbolTable.h  WrapperTable.h
src/Yolk/Yolk/Memory/MemoryManager/: MemoryIndexer.h  MemoryManager.h
src/Yolk/Yolk/Object/: Object.h
src/Yolk/Yolk/Tools/yolkc/: Cargo.toml
src/Yolk/Yolk/Tools/yolkc/src/: lexer.rs
src/Yolk/Yolk/Wrapper/: TypedField.h  Wrapper.h  WrapperGenerator.h  WrapperRequired.h
src/Yolk/YolkVM/: Assembler.h  Elementary.cpp  Elementary.h  Instruction.cpp  Instruction.h  Notes.txt  OVO.cpp  OVO.h  Operators.h  VM.h  YVM.cpp  YVM.h
tests/: CMakeLists.txt  demo.ovo
tests/Automata/: test_automaton.cpp
tests/Yolk/Memory/: test_memoryblock.cpp  test_memorymanager.cpp  test_symboltable.cpp  test_wrappertable.cpp
tests/Yolk/Object/: test_object.cpp
tests/Yolk/Wrapper/: .swp  test_methodwrapper.cpp  test_tunwrapper.cpp  test_tvariable.cpp  test_wrapper.cpp  test_wrappergenerator.cpp
tests/Yolk/YolkVM/: test_instructions.cpp  test_ovo.cpp  test_vm.cpp
(+34 files in other folders)
